--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.15.5",
+    "express-ejs-layouts": "^2.3.1",
+    "express-session": "^1.15.6",
     "mongodb": "^2.2.34",
+    "mongoose": "^5.0.4",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
